changes on register

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,30 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark pb-3">
-  <img class="mr-4 ml-4" src="../../../assets/Mini_Logo_Principal_MIDE.png" alt="MIDE">
-    <a href="#" id="logo-title" class="navbar-brand">
-      <span class="" id="start-title">Ticket</span> <span id="second-title"> Manager</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="" class="nav-link">link</a></li>
-            <li class="nav-item"><a href="" class="nav-link">link</a></li>
-            <li class="nav-item"><a href="" class="nav-link">link</a></li>
-        </ul>
-    </div>
+	<img
+		id="img-logo"
+		class="mr-4 ml-4 img-fluid"
+		src="../../../assets/Mini_Logo_Principal_MIDE.png"
+		alt="MIDE"
+	/>
+	<a href="#" id="logo-title" class="navbar-brand">
+		<span class="" id="start-title">Ticket</span>
+		<span id="second-title"> Manager</span>
+	</a>
+	<button
+		class="navbar-toggler"
+		type="button"
+		data-toggle="collapse"
+		data-target="#navbarSupportedContent"
+		aria-controls="navbarSupportedContent"
+		aria-expanded="false"
+		aria-label="Toggle navigation"
+	>
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item"><a href="" class="nav-link">link</a></li>
+			<li class="nav-item"><a href="" class="nav-link">link</a></li>
+			<li class="nav-item"><a href="" class="nav-link">link</a></li>
+		</ul>
+	</div>
 </nav>
