--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div id="main-container">
+	<app-navbar></app-navbar>
+	<router-outlet></router-outlet>
+</div>
