--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -1,18 +1,20 @@
-
+#img-logo {
+	width: 5%;
+	height: 5%;
+}
 
 #logo-title {
-  font-size: 25px;
+	font-size: 25px;
 
-  #start-title {
-    color: #dc3545;
-    font-weight: bold;
-    font-style: oblique;
-  }
+	#start-title {
+		color: #dc3545;
+		font-weight: bold;
+		font-style: oblique;
+	}
 
-  #second-title {
-    color: #007bff;
-    font-weight: bold;
-    //font-style: oblique;
-  }
-
+	#second-title {
+		color: #007bff;
+		font-weight: bold;
+		//font-style: oblique;
+	}
 }
