--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,35 +1,11 @@
-
-<div id="card-container" class="d-flex flex-row justify-content-center">
-  <div id="card" class="card bg-light text-dark pt-4">
-    <div id="logo-container">
-      <img class="" src="https://mide.gob.do/wp-content/uploads/2021/03/logo.png" alt="Mide Logo">
-    </div>
-
-    <form id="form-nav">
-      <div class="mb-4 mt-5">
-          <input [(ngModel)]="Name" [ngModelOptions]="{standalone: true}" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre Usuario">
-      </div>
-      <div class="mb-4">
-          <input [(ngModel)]="Password" [ngModelOptions]="{standalone: true}" type="password" class="form-control input-register" id="exampleFormControlInput1" placeholder="Contraseña">
-      </div>
-      <div class="mb-4">
-          <input [(ngModel)]="ConfirmPassword" [ngModelOptions]="{standalone: true}" type="password" class="form-control input-register" id="exampleFormControlInput1" placeholder="Confirmar Contraseña">
-      </div>
-
-      <div class="custom-control custom-checkbox">
-        <input (ngModelChange)="ChangeInputStatus()" [(ngModel)]="ShowPassword" [ngModelOptions]="{standalone: true}" type="checkbox" class="custom-control-input" id="customCheck1">
-        <label class="custom-control-label" for="customCheck1">Ver Contraseña</label>
-      </div>
-
-      <div class="row mb-4 mt-2">
-          <button class="btn btn-success" (click)="Register()">Registrar</button>
-          <button class="btn btn-secondary" (click)="ClearForm()">Limpiar</button>
-      </div>
-    </form>
-  </div>
+<div
+	id="card-container"
+	class="container d-flex flex-row justify-content-center align-items-center"
+>
+	<div class="form">
+		<app-register-form></app-register-form>
+	</div>
 </div>
-
-
 
 <!-- <div class="d-flex flex-row justify-content-center align-items-center container-fluid">
 
