--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,9 @@
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item"><a href="" class="nav-link">link</a></li>
 			<li class="nav-item"><a href="" class="nav-link">link</a></li>
-			<li class="nav-item"><a href="" class="nav-link">link</a></li>
+			<li class="nav-item">
+				<app-login-form></app-login-form>
+			</li>
 		</ul>
 	</div>
 </nav>
