login form changes

--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -1,6 +1,6 @@
 <form class="form-row" (ngSubmit)="OnSubmit()">
-    <div class="col-md-5"><input name="username" [(ngModel)]="username" type="text" class="form-control" placeholder="username"></div>
-    <div class="col-md-5"><input type="password" [(ngModel)]="password" class="form-control" placeholder="password"></div>
+    <div class="col-md-5"><input name="username" [(ngModel)]="this._shared.username" type="text" class="form-control" placeholder="username"></div>
+    <div class="col-md-5"><input type="password" name="loginPassword" [(ngModel)]="this._shared.loginPassword" class="form-control" placeholder="password"></div>
     <div class="col-md-2">
         <button type="submit" class="btn btn-block btn-success">Ingresar</button>
     </div>
