--- a/frontend/src/app/components/register-form/register-form.component.scss
+++ b/frontend/src/app/components/register-form/register-form.component.scss
@@ -1,3 +1,7 @@
+
+#card {
+  margin-top: -125px;
+}
 .card-hearder {
 	display: flex;
 	flex-direction: row;
@@ -8,6 +12,7 @@
 		width: 60%;
 	}
 }
+
 
 // #form-nav {
 // 	width: 100%;
