--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -22,9 +22,15 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item"><a href="" class="nav-link">Registrar Usuario</a></li>
-			<li class="nav-item"><a href="" class="nav-link">link</a></li>
-			<li class="nav-item">
+			<li class="nav-item" *ngIf="isAuthenticated | async">				
+				<div ngbDropdown class="d-inline-block" display="dynamic">
+					<a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>{{ username | async }}</a>
+					<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+					  <button (click)="logout()" ngbDropdownItem>Salir</button>					  
+					</div>
+				  </div>
+			</li>
+			<li class="nav-item" *ngIf="!(isAuthenticated | async)">
 				<app-login-form></app-login-form>
 			</li>
 		</ul>
