--- a/frontend/src/app/components/add-ticket/add-ticket.component.html
+++ b/frontend/src/app/components/add-ticket/add-ticket.component.html
@@ -1,4 +1,4 @@
-<div id="card" class="card bg-light text-dark col-md-6">
+<div id="card" class="card bg-light text-dark col-md-6 mt-5">
 	<div id="logo-container" class="card-hearder">
 		<img
 			id="header-image"
