--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -2,8 +2,8 @@
 	id="card-container"
 	class="container d-flex flex-row justify-content-center align-items-center"
 >
-	<div class="form">
-		<app-register-form></app-register-form>
+	<div class="form col-md-12">
+		<app-register-form class="d-flex flex-row justify-content-center align-items-center"></app-register-form>
 	</div>
 </div>
 
