--- a/frontend/src/app/components/register-form/register-form.component.html
+++ b/frontend/src/app/components/register-form/register-form.component.html
@@ -1,4 +1,4 @@
-<div id="card" class="card bg-light text-dark">
+<div id="card" class="card bg-light text-dark col-md-6">
 	<div id="logo-container" class="card-hearder">
 		<img
 			id="header-image"
