--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -8,13 +8,13 @@
       <li ngbNavItem [ngbNavItem]="2" class="col-md-4 text-center">
         <a ngbNavLink class="hover-tab">Registrar Ticket</a>
         <ng-template ngbNavContent>
-          <app-add-ticket></app-add-ticket>
+          <app-add-ticket class="d-flex flex-row justify-content-center align-items-center"></app-add-ticket>
         </ng-template>
       </li>
     </ul>
   </div>
 
-  <section id="ng-container" class="">
+  <section id="ng-container">
     <div [ngbNavOutlet]="nav"></div>
   </section>
 </div>
