--- a/frontend/src/app/components/add-ticket/add-ticket.component.scss
+++ b/frontend/src/app/components/add-ticket/add-ticket.component.scss
@@ -17,3 +17,16 @@
 		width: 35%;
 	}
 }
+
+
+#member-container {
+
+
+  .card-header {
+    font-family: 'Anton', sans-serif !important;
+  }
+
+  #name-element {
+    font-weight: normal !important;
+  }
+}
