--- a/frontend/src/app/components/add-ticket/add-ticket.component.html
+++ b/frontend/src/app/components/add-ticket/add-ticket.component.html
@@ -9,10 +9,10 @@
 	</div>
 
 	<form id="form-nav" class="card-body">
-    <h2 class="text-center">Registrar Ticket</h2>
+    <h2 class="text-center">Registro</h2>
 		<div class="mb-4 mt-5">
 			<input
-				[(ngModel)]="_share.Name"
+				[(ngModel)]="TicketName"
 				[ngModelOptions]="{ standalone: true }"
 				type="text"
 				class="form-control"
@@ -23,7 +23,7 @@
 
 		<div class="mb-4">
 			<textarea
-      [(ngModel)]="_share.Password"
+      [(ngModel)]="TicketDescripcion"
 				[ngModelOptions]="{ standalone: true }"
 				type="password"
 				class="form-control input-pass p-3"
@@ -34,11 +34,21 @@
 		</div>
 
     <div class="mb-4">
-      <div class="row">
+      <div class="row ml-2">
+        <div id="member-container" class="d-inline-block">
+          <div class="card" style="width: 18rem;">
+            <div class="card-header text-center">
+              Asignado A:
+            </div>
+            <ul class="list-group list-group-flush">
+              <li id="name-element" class="list-group-item text-center text-danger">Nombre</li>
+            </ul>
+          </div>
+        </div>
         <div class="col d-flex flex-row justify-content-end">
-          <div ngbDropdown class="d-inline-block">
-            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{SelectTitle}}</button>
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <div ngbDropdown class="d-inline-block pb-1">
+            <button class="btn btn-outline-primary mt-4 mr-2" id="dropdownBasic1" ngbDropdownToggle>{{SelectTitle}}</button>
+            <div id="button-container" ngbDropdownMenu aria-labelledby="dropdownBasic1">
               <button (click)="LowPriority()" class="text-success text-bold" ngbDropdownItem>Baja</button>
               <button (click)="MediumPriority()" class="text-warning" ngbDropdownItem>Promedio</button>
               <button (click)="HighPriority()" class="text-danger" ngbDropdownItem>Alta</button>
@@ -59,7 +69,7 @@
 				</button>
 			</div>
 			<div class="col-md-6">
-				<button class="btn btn-block btn-success">
+				<button class="btn btn-block btn-success" (click)="CreateTicket()">
 					Registrar
 				</button>
 			</div>
