--- a/frontend/src/app/components/add-ticket/add-ticket.component.html
+++ b/frontend/src/app/components/add-ticket/add-ticket.component.html
@@ -38,7 +38,7 @@
         <div id="member-container" class="d-inline-block">
           <div class="card" style="width: 18rem;">
             <div class="card-header text-center">
-              Asignado A:
+              Se Asignara A:
             </div>
             <ul class="list-group list-group-flush">
               <li id="name-element" class="list-group-item text-center text-danger">Nombre</li>
