--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -22,13 +22,17 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item" *ngIf="isAuthenticated | async">				
+			<li class="nav-item" *ngIf="isAuthenticated | async">
 				<div ngbDropdown class="d-inline-block" display="dynamic">
-					<a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>{{ username | async }}</a>
+					<a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>{{
+						username | async
+					}}</a>
 					<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-					  <button (click)="logout()" ngbDropdownItem>Salir</button>					  
+						<button (click)="logout()" ngbDropdownItem>
+							Salir
+						</button>
 					</div>
-				  </div>
+				</div>
 			</li>
 			<li class="nav-item" *ngIf="!(isAuthenticated | async)">
 				<app-login-form></app-login-form>
