--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -1,10 +1,19 @@
+.navbar {
+	background-color: #1c4670 !important;
+	.navbar-nav {
+		.nav-link {
+			font-weight: 600;
+		}
+	}
+}
+
 #img-logo {
 	width: 5%;
 	height: 5%;
 }
 
 #dropdownBasic1 {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 #logo-title {
@@ -14,11 +23,13 @@
 		color: #dc3545;
 		font-weight: bold;
 		font-style: oblique;
+		-webkit-text-stroke: 1px #e3e3e3;
 	}
 
 	#second-title {
 		color: #007bff;
 		font-weight: bold;
+		-webkit-text-stroke: 1px #e3e3e3;
 		//font-style: oblique;
 	}
 }
