changes on tickets table

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark pb-3">
-	<img
+	<!-- <img
 		id="img-logo"
 		class="mr-4 ml-4 img-fluid"
 		src="../../../assets/Mini_Logo_Principal_MIDE.png"
 		alt="MIDE"
-	/>
+	/> -->
 	<a href="#" id="logo-title" class="navbar-brand">
 		<span class="" id="start-title">Ticket</span>
 		<span id="second-title"> Manager</span>
