--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -10,6 +10,7 @@
 #img-logo {
 	width: 5%;
 	height: 5%;
+	position: absolute;
 }
 
 #dropdownBasic1 {
@@ -17,7 +18,7 @@
 }
 
 #logo-title {
-	font-size: 25px;
+	font-size: 1.8rem;
 
 	#start-title {
 		color: #dc3545;
