--- a/frontend/src/app/components/register-form/register-form.component.html
+++ b/frontend/src/app/components/register-form/register-form.component.html
@@ -55,21 +55,21 @@
 		</div>
 	</form>
 
-	<div class="card-footer">
-		<div class="row">
-			<div class="col-md-6">
-				<button
-					class="btn btn-block btn-secondary"
-					(click)="_share.ClearForm()"
-				>
-					Limpiar
-				</button>
-			</div>
-			<div class="col-md-6">
-				<button class="btn btn-block btn-success" (click)="Register()">
-					Registrar
-				</button>
-			</div>
+	<!-- <div class="card-footer w-100"> -->
+	<div class="row card-footer">
+		<div class="col-md-6">
+			<button
+				class="btn btn-block btn-secondary"
+				(click)="_share.ClearForm()"
+			>
+				Limpiar
+			</button>
+		</div>
+		<div class="col-md-6">
+			<button class="btn btn-block btn-success" (click)="Register()">
+				Registrar
+			</button>
 		</div>
 	</div>
+	<!-- </div> -->
 </div>
