--- a/frontend/src/app/components/tickets-table/tickets-table.component.html
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.html
@@ -5,9 +5,10 @@
 				<th scope="col">#</th>
 				<th scope="col">Title</th>
 				<th scope="col">Description</th>
-				<th scope="col"comportance</th>
+				<th scope="col">comportance</th>
 				<th scope="col">Created</th>
 				<th scope="col">Status</th>
+				<th scope="col"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -16,28 +17,39 @@
 				<td>{{ item?.title }}</td>
 				<td>{{ item?.description }}</td>
 				<td>
-					<span *ngIf="item.importance == 1" class="tag text-danger"
+					<span *ngIf="item.importance == 1" class="tag danger"
 						>high</span
 					>
-					<span *ngIf="item.importance == 2" class="tag text-warning"
+					<span *ngIf="item.importance == 2" class="tag warning"
 						>medium</span
 					>
-					<span *ngIf="item.importance == 3" class="tag text-success"
+					<span *ngIf="item.importance == 3" class="tag success"
 						>low</span
 					>
 				</td>
-				<td>{{ item?.created | date }}</td>
+				<td>{{ item?.created | date: 'short' }}</td>
 				<td>
 					<span
 						*ngIf="item.isCompleted; else pending"
-						class="tag tag-success"
-						>completed</span
+						class="tag success"
+						>completada</span
 					>
 					<ng-template #pending
-						><span class="tag tag-warning"
-							>pending</span
+						><span class="tag warning"
+							>pendiente</span
 						></ng-template
 					>
+				</td>
+				<td class="row justify-content-between pr-2">
+					<span class="btn text-secondary">
+						<fa-icon [icon]="faEdit"></fa-icon>
+					</span>
+					<span class="btn text-info">
+						<fa-icon [icon]="faEye"></fa-icon>
+					</span>
+					<span class="btn text-danger">
+						<fa-icon [icon]="faTrash"></fa-icon>
+					</span>
 				</td>
 			</tr>
 		</tbody>
