--- a/frontend/src/app/components/tickets-table/tickets-table.component.html
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.html
@@ -1,14 +1,15 @@
-<table class="table table-reponsive table-striped">
+<table class="table table-reponsive table-striped mt-5">
     <thead class="thead-dark">
         <tr>
             <td class="th">#</td>
-            <td class="th">Title</td>
-            <td class="th">Description</td>
-            <td class="th">Importance</td>
+            <td class="th">Nombre</td>
+            <td class="th">Descripcion</td>
+            <td class="th">Prioridad</td>
             <td class="th">UserId</td>
             <td class="th">AssignTo</td>
-            <td class="th">IsCompleted</td>
-            <th class="th">Options</th>
+            <td class="th">Completado</td>
+            <td class="th">Opciones</td>
+            <!-- <th class="th">Opciones</th> -->
         </tr>
     </thead>
     <tbody>
