--- a/frontend/src/app/components/add-ticket/add-ticket.component.html
+++ b/frontend/src/app/components/add-ticket/add-ticket.component.html
@@ -15,7 +15,7 @@
 				[(ngModel)]="TicketName"
 				[ngModelOptions]="{ standalone: true }"
 				type="text"
-				class="form-control"
+				class="form-control clear"
 				id="exampleFormControlInput1"
 				placeholder="Titulo"
 			/>
@@ -26,7 +26,7 @@
       [(ngModel)]="TicketDescripcion"
 				[ngModelOptions]="{ standalone: true }"
 				type="password"
-				class="form-control input-pass p-3"
+				class="form-control input-pass p-3 clear"
 				id="text-description"
 				placeholder="Descripcion">
       </textarea>
@@ -35,16 +35,12 @@
 
     <div class="mb-4">
       <div class="row ml-2">
-        <div id="member-container" class="d-inline-block">
-          <div class="card" style="width: 18rem;">
-            <div class="card-header text-center">
-              Se Asignara A:
-            </div>
-            <ul class="list-group list-group-flush">
-              <li id="name-element" class="list-group-item text-center text-danger">Nombre</li>
-            </ul>
-          </div>
-        </div>
+        <select id="select-member" [(ngModel)]="UserAssingId" [ngModelOptions]="{ standalone: true }" class="form-select mt-3 col-6 pr-3" aria-label="Default select example">
+          <option disabled selected>{{UserName}}</option>
+          <option class="text-black" *ngFor="let item of UsersSupports;" value="{{item.id}}">
+            {{item.username}}
+          </option>
+        </select>
         <div class="col d-flex flex-row justify-content-end">
           <div ngbDropdown class="d-inline-block pb-1">
             <button class="btn btn-outline-primary mt-4 mr-2" id="dropdownBasic1" ngbDropdownToggle>{{SelectTitle}}</button>
@@ -64,7 +60,7 @@
 			<div class="col-md-6">
 				<button
 					class="btn btn-block btn-secondary"
-					(click)="_share.ClearForm()">
+					(click)="ClearForm()">
 					Limpiar
 				</button>
 			</div>
