--- a/frontend/src/app/components/tickets-table/tickets-table.component.html
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.html
@@ -5,7 +5,7 @@
 				<th scope="col">#</th>
 				<th scope="col">Title</th>
 				<th scope="col">Description</th>
-				<th scope="col"comportance</th>
+				<th scope="col">comportance</th>
 				<th scope="col">Created</th>
 				<th scope="col">Status</th>
 			</tr>
