--- a/frontend/src/app/components/tickets-table/tickets-table.component.html
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.html
@@ -1,14 +1,14 @@
-<div class="container-fluid d-flex flex-row justify-content-center align-items-center">
-	<table id="ticket-table" class="table table-hover table-responsive w-75 mt-5">
+<div class="container-fluid">
+	<table class="table table-hover table-responsive">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
-				<th scope="col">Titulo</th>
-				<th scope="col">Descripcion</th>
-				<th scope="col">Prioridad</th>
-				<th scope="col">Fecha Creacion</th>
-				<th scope="col">Estatus</th>
-				<th scope="col" class="text-black text-bold">Operaciones</th>
+				<th scope="col">Title</th>
+				<th scope="col">Description</th>
+				<th scope="col">comportance</th>
+				<th scope="col">Created</th>
+				<th scope="col">Status</th>
+				<th scope="col"></th>
 			</tr>
 		</thead>
 		<tbody>
