--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -14,14 +14,7 @@
 			<li ngbNavItem [ngbNavItem]="1" class="col-md-4 text-center active">
 				<a ngbNavLink class="hover-tab">Tickets</a>
 				<ng-template ngbNavContent>
-					<app-tickets-table
-          class="
-          d-flex
-          flex-row
-          justify-content-center
-          align-items-center
-        "
-          ></app-tickets-table>
+					<app-tickets-table></app-tickets-table>
 				</ng-template>
 			</li>
 			<li ngbNavItem [ngbNavItem]="2" class="col-md-4 text-center">
