--- a/frontend/src/app/components/tickets-table/tickets-table.component.html
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid d-flex flex-row justify-content-center align-items-center">
-	<table class="table table-hover table-responsive w-75 mt-4">
+	<table class="table table-hover w-100 mt-4">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
 				<th scope="col">Title</th>
 				<th scope="col">Description</th>
-				<th scope="col">comportance</th>
+				<th scope="col">Importance</th>
 				<th scope="col">Created</th>
 				<th scope="col">Status</th>
 				<th scope="col"></th>
@@ -71,7 +71,7 @@
 					 <div class="row mt-3">
 						 <div class="col-md-6">
 							 <div class="form-group"><label for="">Asignar a: </label>
-                <select name="" id="" class="form-control">
+                <select name="" id="" class="form-control" [(ngModel)]="item.assignTo" >
                   <option disabled selected>Seleccionar Usuario</option>
                   <option class="text-black" *ngFor="let item of UsersSupports;" value="{{item.id}}">
                     {{item.username}}
@@ -81,7 +81,7 @@
 						 </div>
 						 <div class="col-md-6">
 							 <div class="form-group"><label for="">Prioridad: </label>
-                <select name="" id="" class="form-control">
+                <select name="" id="" class="form-control" [(ngModel)]="item.importance">
                   <option disabled selected>Seleccionar Prioridad</option>
                   <option class="text-success" value="1">Baja</option>
                   <option class="text-warning" value="2">Promedio</option>
