New changes in table component

--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -21,14 +21,14 @@
 	font-size: 1.8rem;
 
 	#start-title {
-		color: #dc3545;
+		color: #e1eedd;
 		font-weight: bold;
 		font-style: oblique;
 		-webkit-text-stroke: 1px #e3e3e3;
 	}
 
 	#second-title {
-		color: #007bff;
+		color: #31383f;
 		font-weight: bold;
 		-webkit-text-stroke: 1px #e3e3e3;
 		//font-style: oblique;
