--- a/frontend/src/app/components/tickets-table/tickets-table.component.scss
+++ b/frontend/src/app/components/tickets-table/tickets-table.component.scss
@@ -13,6 +13,13 @@
   font-weight: bold;
 }
 
+#col-button {
+  button {
+    display: block;
+    margin: 0px auto;
+  }
+}
+
 .tag {
 	border-radius: 0.3em;
 	padding: 0.3em 0.5em;
